# sysml.rs

./: .gitmodules  CHANGES.md  Cargo.toml  README.md
lib/kerml/: Cargo.toml
lib/kerml/src/: core.rs  element.rs  kernel.rs  lib.rs  namespace.rs  prelude.rs  root.rs
lib/kerml/src/core/: classifier.rs  feature.rs  type.rs
lib/kerml/src/kernel/: association.rs  class.rs  connector.rs  datatype.rs  package.rs  structure.rs
lib/kerml/src/root/: annotation.rs  dependency.rs  element.rs  namespace.rs  qualified_name.rs  relationship.rs
lib/sysml/: Cargo.toml
lib/sysml-model/: Cargo.toml
lib/sysml-model/src/: attribute.rs  block.rs  connection.rs  definition.rs  element.rs  enumeration.rs  import.rs  interface.rs  item.rs  lib.rs  occurrence.rs  package.rs  part.rs  port.rs  prelude.rs  usage.rs
lib/sysml-parser/: Cargo.toml
lib/sysml-parser/src/: attribute.rs  block.rs  error.rs  grammar.rs  import.rs  keyword.rs  lexer.rs  lib.rs  member.rs  package.rs  parse_error.rs  parsed_attribute.rs  parsed_block.rs  parsed_import.rs  parsed_model.rs  parsed_package.rs  parsed_port.rs  parser.rs  port.rs  span.rs  spanned.rs  syntax_error.rs
lib/sysml-parser/tests/: examples.rs  names.rs  simple.rs  usage.rs
lib/sysml/src/: lib.rs
parser_test_suite/: Cargo.toml
parser_test_suite/src/: main.rs
