[package]
name = "sysml-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["std", "tracing"]
std = ["nom/std", "sysml-model/std", "tracing?/std"]
tracing = ["dep:tracing"]

[dependencies]
sysml-model = "0.1.2"
tracing = { version = "0.1", optional = true, default-features = false }
nom = { version = "7", default-features = false, features = ["alloc"] }
