[package]
name = "sysml-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["error-stack", "tracing"]
error-stack = ["dep:error-stack"]
std = [
    "error-stack?/std",
    "nom/std",
    "nom_locate/std",
    "sysml-model/std",
    "tracing?/std",
]
tracing = ["dep:tracing"]
unstable = ["sysml-model/unstable"]

[dependencies]
error-stack = { version = "0.5", default-features = false, optional = true }
nom = { version = "7", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.2", default-features = false, features = ["alloc"] }
sysml-model = "0.2.3"
tracing = { version = "0.1", default-features = false, optional = true }
