[package]
name = "sysml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["std", "tracing"]
std = ["sysml-model/std", "sysml-parser/std", "tracing?/std"]
tracing = ["dep:tracing", "sysml-parser/tracing"]

[dependencies]
sysml-model = "0.1.1"
sysml-parser = "0.1.1"
tracing = { version = "0.1", optional = true, default-features = false }
